<resources>
    <string name="app_name">eHealthHistory</string>
    <string name="logo_app">Logo App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Inicie sesión</string>
    <string name="image_app">"Imagen de la aplicación"</string>
    <string name="nameBaseActivity"> eHealthHistory </string>

    <!-- Pantalla: MainRoles-->
    <string name="futbolista">Futbolista</string>
            <string name="footballerDNI_textView">DNI:</string>
            <string name="footballerTelcom_textView">Teléfono personal:</string>
            <string name="footballerBirthday_textView">Cumpleaños: </string>
            <string name="ButtonfootballerVerDatos">Ver datos de contacto</string>
                    <string name="footballerContactName_textView">Nombre del representante:</string>
                    <string name="TextViewfootballerContactTelf">Teléfono contacto:</string>
                    <string name="TextViewfootballerLenguaje">Idioma:</string>
                    <string name="TextViewfootballerContactAdress">Dirección:</string>
                    <string name="footballerContactClub_TextView">Club de contacto</string>
                    <string name="footballerContactClubName_TextView">Nombre:</string>
                    <string name="footballerContactClubAlias_TextView">Alias:</string>
                    <string name="footballerContactClubContactName_TextView">Nombre de contacto:</string>
                    <string name="footballerContactTeamCareClub_TextView">Datos equipo médico del club</string>
                    <string name="footballerContactClubTeamCareName_TextView">Nombre:</string>
                    <string name="footballerContactClubTeamCareTelecom_TextView">Teléfono contacto:</string>
                    <string name="footballerContactClubContactTeamCareNote_TextView">Nota:</string>

            <string name="historial_cuidados_footballer">Historial de cuidados médicos</string>
                    <string name="TextViewTableCategory">Categoría</string>
                    <string name="TextViewTableActivo">Activo</string>
            <string name="buttonfootballerHealthCareDetails">Ver historial médico detallado</string>
                    <string name="selectHealthCare_textView">Selecciona cuidado:</string>
                    <string name="healthCareInfo_textView">Información cuidado</string>
                    <string name="healthCareDays_textView">Días:</string>
                    <string name="healthCareNote_textView">Nota:</string>
            <string name="buttonfootballerTeamCares">Medicos de confianza</string>
                    <string name="favCareTeam_textView">Equipo médico favorito:</string>
                    <string name="favCareTeamStatus_textView">Estado:</string>
                    <string name="favCareTeamTelecom_textView">Teléfono de contacto:</string>
                    <string name="favCareTeamNote_textView">Nota:</string>
                    <string name="favCareTeamDatatextView">Datos equipo médico</string>
                    <string name="newFavCareTeam_textView">Nuevo equipo médico favorito:</string>
                    <string name="newFavCareTeamDatatextView">Datos nuevo equipo médico</string>
                    <string name="newFavCareTeamStatus_textView">Estado:</string>
                    <string name="newFavCareTeamTelecom_textView">Teléfono contacto:</string>
                    <string name="newFavCareTeamNote_textView">Nota:</string>
                    <string name="favCareTeamName_textView">Nombre:</string>
                    <string name="buttonAddNewFavCareTeam">Añadir equipo médico</string>


    <string name="medico">Médico</string>
            <string name="careTeamCIF_textView">CIF:</string>
            <string name="careTeamStatus_textView">Estado:</string>
            <string name="careTeamTelecom_textView">Teléfono contacto:</string>
            <string name="careTeamNote_textView">Nota:</string>
            <string name="careTeamFootballers_textView">Futbolistas a cargo</string>
            <string name="careTeamFootballerClub_textView">Club</string>
            <string name="buttonAddHealthCareService">Añadir cuidado a futbolista</string>
            <string name="buttonFilterByName">Filtrar</string>
            <string name="buttonFilterReset">Reset</string>
            <string name="hintFootballerName">Nombre</string>


                    <string name="selectFootballer_textView">Seleccione futbolista:</string>
                    <string name="tratamientoActual">Tratamiento actual</string>
                    <string name="healthCareCareTeam_textView">Médico:</string>
                    <string name="healthCareDay_textView">Día diagnóstico:</string>
                    <string name="healthCareCategory_textView">Categoría:</string>
                    <string name="healthCareName_textView">Nombre tratamiento:</string>
                    <string name="healthCareCommentary_textView">Comentarios sobre tratamiento:</string>
                    <string name="healthCareExtraDetails_textView">Detalles extra:</string>
                    <string name="healthCareAllDay_textView">¿Cuidado 24 horas?</string>
                    <string name="healthCareDuracion_textView">Duración tratamiento</string>
                    <string name="healthCareHoraInicio_textView">Hora Inicio:</string>
                    <string name="healthCareHoraFin_textView">Hora Fin:</string>
                    <string name="radioButton_AllDay">Tratamiento 24 horas</string>
                    <string name="healthCareDias_textView">Días:</string>
                            <string name="checkBox_Lunes">L</string>
                            <string name="checkBox_Martes">M</string>
                            <string name="checkBox_Miercoles">X</string>
                            <string name="checkBox_Jueves">J</string>
                            <string name="checkBox_Viernes">V</string>
                            <string name="checkBox_Sabado">S</string>
                            <string name="checkBox_Domingo">D</string>
                            <string name="buttonAddHealthCare">Añadir</string>
        <string name="healthcare_ok">Cuidado añadido</string>


        <string name="club">Club</string>
            <string name="clubCIF_textView">CIF:</string>
            <string name="careTeamName_textView">Nombre:</string>
            <string name="clubPresident_textView">Presidente:</string>
            <string name="clubAlias_textView">Alias:</string>
            <string name="clubContact_textView">Contacto:</string>
            <string name="clubActive_textView">Activo:</string>
            <string name="clubTeamCare_textView">Equipo médico:</string>
            <string name="clubNewTeamCare_textView">Asignar nuevo Equipo médico</string>
                    <string name="actualCareTeam_textView">Equipo médico actual</string>
                    <string name="newCareTeam_textView">Nuevo equipo médico</string>
                    <string name="buttonAddNewCareTeam">Actualizar equipo médico</string>

    <string name="clubFootballers_textView">Futbolistas del club</string>
            <string name="clubFootballerName_textView">Nombre</string>
            <string name="clubFootballerActive_textView">Activo</string>

    <!-- MENSAJES DE ERROR -->
        <!-- Pantalla Login -->
    <string name="ok_usuario_contra"> Inicio de sesión correcto</string>
    <string name="error_usuario_contra">Error inicio de sesión</string>

        <!-- Pantalla Footballer -->
        <string name="error_usuario_healthcares">No hay cuidados que ver</string>

        <!-- Pantalla CareTeam -->
        <string name="error_usuario_futbolista">No hay futbolistas</string>
        <string name="error_careteam_noactive">No está en activo</string>


    <!-- Pantalla Add HealthCare -->
        <string name="error_usuario_camposvacios">Rellene los campos</string>
        <string name="error_usuario_horas">Horas de tratamiento erroneas</string>
        <string name="error_usuario_sindias">Selecciones al menos 1 día</string>

        <!-- Pantalla Add TeamCare desde Footballer -->
        <string name="error_usuario_newfavteamcare">Nuevo equipo médico ya existe</string>

        <!-- Pantalla Add New TeamCare desde Club y Footballer-->
        <string name="success_adding_newcareteam">Añadido con éxito</string>
        <string name="error_adding_newcareteam">El equipo médico no está en activo</string>



</resources>